<resources>
    <string name="app_name">Waktiva</string>
    <string name="nav_home">Home</string>
    <string name="nav_qibla">Qibla</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_prayer_log">Prayer Log</string>
    <string name="nav_donate">Donate</string>
    <string name="cd_back">Back</string>
    <string name="qibla_label">Qibla</string>
    <string name="qibla_compass">Compass</string>
    <string name="qibla_map">Map</string>
    <string name="qibla_mecca_aligned">Aligned to Makkah</string>
    <string name="qibla_rotate_phone">Rotate Phone</string>
    <string name="qibla_direction">Qibla: %d°</string>
    <string name="qibla_locating">Locating...</string>
    <string name="qibla_heading">Heading</string>
    <string name="qibla_signal">Signal</string>
    <string name="qibla_standard">Standard</string>
    <string name="qibla_satellite">Satellite</string>
    <string name="qibla_recenter">Recenter</string>
    <string name="qibla_location_required">Location Access Required</string>
    <string name="qibla_location_required_desc">Required for accurate Qibla calculation.</string>
    <string name="qibla_grant_permission">Grant Permission</string>
    <string name="qibla_calibration_needed">Calibration Needed</string>
    <string name="qibla_calibration_desc">Move your phone in a figure-8 pattern (∞) to improve accuracy.</string>
    <string name="qibla_got_it">Got it</string>
    <string name="qibla_aligned_badge">ALIGNED</string>
    <string name="qibla_magnetic_interference">Magnetic Interference Detected - Calibrate Device</string>
    <string name="qibla_kaaba_aligned">Aligned to Kaaba</string>
    <string name="qibla_find_marker">Find the Gold Marker</string>
    <string name="qibla_calibrate">CALIBRATE</string>
    <string name="qibla_interference_tip">Tip: Inside buildings, metal structures can affect the compass. For best accuracy, perform a figure-8 calibration.</string>
    <string name="home_unknown_location">Unknown Location</string>
    <string name="home_last_known_location">Last known: %s</string>
    <string name="home_gps_disabled_location">GPS Disabled</string>
    <string name="home_location_permission_denied">Location Denied</string>
    <string name="home_offline_status">Offline</string>
    <string name="home_next_prayer">%s</string>
    <string name="home_remaining_time">Time remaining</string>
    <string name="home_permissions_required">Permissions Required</string>
    <string name="home_permissions_desc">Location and Notification permissions are required for the app to function properly.</string>
    <string name="home_grant_permissions">Grant Permissions</string>
    <string name="home_refresh_success">Prayer times updated</string>
    <string name="home_refresh_error">Failed to update times</string>
    <string name="home_prayer_provider">Provider: </string>
    <string name="home_skip_adhan">Mute Adhan</string>
    <string name="home_unmute_adhan">Unmute Adhan</string>
    <string name="home_return_to_today">Return to Today</string>
    <string name="home_tomorrow_is">Tomorrow: %s</string>
    <string name="home_today_is">Today is %s</string>
    <string name="home_adhan_muted">Adhan muted for %s</string>
    <string name="home_adhan_unmuted">Adhan enabled for %s</string>
    <string name="home_hijri_offline_note">Using offline Hijri calculation</string>
    <string name="home_hijri_offline_indicator"> (*)</string>
    <string name="home_current_time">Current Time</string>
    <string name="location_health_gps_off">GPS Disabled</string>
    <string name="location_health_permission_denied">Location Denied</string>
    <string name="location_health_offline">Offline Mode</string>
    <string name="location_health_notifications_off">Notifications Denied</string>
    <string name="location_health_channels_muted">Channels Muted</string>
    <string name="location_health_dnd_active">DND Mode Active</string>
    <string name="health_title">System Health</string>
    <string name="health_issues_detected">Issues Detected</string>
    <string name="health_gps_off">GPS is disabled globally. Enable location services to update prayer times.</string>
    <string name="health_channels_muted">Adhan notification channels are muted in system settings.</string>
    <string name="health_dnd_active">Do Not Disturb mode is on. Adhan sounds may be blocked.</string>
    <string name="health_fix_now">Fix Now</string>
    <string name="health_no_internet">No Internet Connection. Waktiva is using stored data. Please connect to update prayer times.</string>
    <string name="health_no_internet_no_data">No Internet Connection. Waktiva needs an active connection to fetch the first prayer times.</string>
    <string name="health_status_ok">All systems operational</string>
    <string name="health_overlay_subtitle">Optimizing your app experience</string>
    <string name="health_overlay_description">Address the issues below to ensure notifications and location services work reliably in the background.</string>
    <string name="health_overlay_dismiss">I understand</string>
    <string name="health_overlay_issues_title">Detected Issues</string>
    <string name="prayer_fajr">Fajr</string>
    <string name="prayer_name_fajr">Fajr</string>
    <string name="prayer_sunrise">Sunrise</string>
    <string name="prayer_dhuhr">Dhuhr</string>
    <string name="prayer_asr">Asr</string>
    <string name="prayer_maghrib">Maghrib</string>
    <string name="prayer_isha">Isha</string>
    <string name="adhan_default_prayer">Prayer</string>
    <string name="accuracy_high">High</string>
    <string name="accuracy_med">Medium</string>
    <string name="accuracy_low">Low</string>
    <string name="accuracy_poor">Poor</string>
    <string name="weather_clear">Clear</string>
    <string name="weather_mainly_clear">Mainly Clear</string>
    <string name="weather_partly_cloudy">Partly Cloudy</string>
    <string name="weather_overcast">Overcast</string>
    <string name="weather_foggy">Foggy</string>
    <string name="weather_drizzle">Drizzle</string>
    <string name="weather_freezing_drizzle">Freezing Drizzle</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_heavy_rain">Heavy Rain</string>
    <string name="weather_freezing_rain">Freezing Rain</string>
    <string name="weather_snowy">Snowy</string>
    <string name="weather_heavy_snow">Heavy Snow</string>
    <string name="weather_snow_grains">Snow Grains</string>
    <string name="weather_rain_showers">Rain Showers</string>
    <string name="weather_snow_showers">Snow Showers</string>
    <string name="weather_thunderstorm">Thunderstorm</string>
    <string name="weather_thunderstorm_hail">Thunderstorm with Hail</string>
    <string name="weather_unknown">Unknown</string>
    <string name="settings_title">Settings</string>
    <string name="settings_preferences">Preferences</string>
    <string name="settings_section_prayer_times">Prayer Times</string>
    <string name="settings_section_appearance">Appearance &amp; Language</string>
    <string name="settings_section_reminders">Reminders &amp; Notifications</string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_manage_system">Manage in System Settings</string>
    <string name="settings_location_access">Location Access</string>
    <string name="settings_location_desc">Crucial for calculating prayer times. Without this, the app cannot fetch times for your location and becomes useless.</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_desc">Required to show prayer time alerts and Adhan notifications.</string>
    <string name="settings_granted">Granted</string>
    <string name="settings_denied">Denied</string>
    <string name="settings_language">App Language</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_confirm">Confirm</string>
    <string name="settings_weather_effects">Weather Effects</string>
    <string name="settings_weather_effects_desc">Show animated weather conditions (rain, snow, clouds) in the background.</string>
    <string name="settings_day_circle_style">Day Circle Style</string>
    <string name="day_circle_style_classic">Classic</string>
    <string name="day_circle_style_classic_desc">The original prayer circle</string>
    <string name="day_circle_style_brass">Brass Movement</string>
    <string name="day_circle_style_brass_desc">A turning brass wheel with meshing prayer gears</string>
    <string name="day_circle_style_steel">Night Steel</string>
    <string name="day_circle_style_steel_desc">Prayer gears running inside a steel ring</string>
    <string name="lang_system">System Default</string>
    <string name="lang_en">English</string>
    <string name="lang_tr">Türkçe</string>
    <string name="lang_fr">Français</string>
    <string name="lang_de">Deutsch</string>
    <string name="lang_es">Español</string>
    <string name="lang_it">Italiano</string>
    <string name="lang_ar">العربية</string>
    <string name="lang_in">Bahasa Indonesia</string>
    <string name="lang_ur">اردو</string>
    <string name="lang_bn">বাংলা</string>
    <string name="lang_fa">فارسی</string>
    <string name="lang_ms">Bahasa Melayu</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_sq">Shqip</string>
    <string name="lang_bs">Bosanski</string>
    <string name="lang_pt">Português</string>
    <string name="lang_pl">Polski</string>
    <string name="lang_nl">Nederlands</string>
    <string name="lang_sv">Svenska</string>
    <string name="lang_fi">Suomi</string>
    <string name="settings_calculation">Calculation Settings</string>
    <string name="settings_madhab">Madhab</string>
    <string name="settings_method">Calculation Method</string>
    <string name="madhab_shafi">Shafi / Standard (Maliki, Hanbali)</string>
    <string name="madhab_hanafi">Hanafi</string>
    <string name="madhab_hanafi_desc">Asr will be approximately one hour later than with the standard calculation.</string>
    <string name="method_mwl">Muslim World League</string>
    <string name="method_isna">Islamic Society of North America (ISNA)</string>
    <string name="method_egypt">Egyptian General Authority of Survey</string>
    <string name="method_makkah">Umm al-Qura University, Makkah</string>
    <string name="method_karachi">University of Islamic Sciences, Karachi</string>
    <string name="method_tehran">Institute of Geophysics, University of Tehran</string>
    <string name="method_gulf">Gulf Region</string>
    <string name="method_kuwait">Kuwait</string>
    <string name="method_qatar">Qatar</string>
    <string name="method_singapore">Majlis Ugama Islam Singapura</string>
    <string name="method_turkey">Turkey (Diyanet)</string>
    <string name="settings_notifications_sound">Notifications &amp; Sound</string>
    <string name="settings_play_adhan">Play Adhan Sound</string>
    <string name="settings_play_adhan_desc">Sound the Adhan when it\'s time to pray</string>
    <string name="settings_play_adhan_dua">Play Adhan Dua</string>
    <string name="settings_play_adhan_dua_desc">Recite the dua after the adhan ends</string>
    <string name="settings_adhan_prayers">Adhan Times</string>
    <string name="settings_adhan_prayers_desc">Choose which prayers play the adhan</string>
    <string name="settings_adhan_sound_selection">Adhan and Notification Settings</string>
    <string name="settings_adhan_sound_selection_desc">Select the sound played during prayer times</string>
    <string name="audio_settings_title">Adhan Sounds</string>
    <string name="audio_header_global">Select Adhan Sound (Global)</string>
    <string name="audio_header_all_prayers">All Prayers</string>
    <string name="audio_header_specific">Adhan for %1$s</string>
    <string name="widget_left">left</string>
</resources>